<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/darker_gray"
        android:layout_margin="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageview_User_Photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:scaleType="fitXY"
                android:src="@drawable/user_img"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_User_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textColor="@android:color/white"
                    android:text="@string/names"
                    />
                <TextView
                    android:id="@+id/textview_User_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textColor="@android:color/white"
                    android:text="@string/emails"
                    />
                <TextView
                    android:id="@+id/textview_User_Phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textColor="@android:color/white"
                    android:text="@string/phones"
                    />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
